--- a/pig-daemon-service-dev.yml
+++ b/pig-daemon-service-dev.yml
@@ -9,5 +9,5 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/pig?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
   elasticjob:
     zookeeper:
-      server-lists: locahost:2181
+      server-lists: localhost:2181
       namespace: pig-daemon
